--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -7,7 +7,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Printing Folder
+      # - name: Printing Folder
+      #   run: |
+      #     echo "Displaying the project folder structure:"
+      #     ls -R
+      - name: Setup Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: "20.x"
+      - name: Install Dependencies
         run: |
-          echo "Displaying the project folder structure:"
-          ls -R
+          cd ./04-using-actions
+          npm ci
